--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -11,9 +11,7 @@
     <img th:src="@{/images/TacoCloud.jpg}" width="500"/>
 
     <form method="POST" th:object="${taco}">
-        <span class="validationError" th:if="${#fields.hasErrors('ingredients')}" th:errors="*{ingredients}">
-            Ingredients Error
-        </span>
+        <span class="validationError" th:errors="*{ingredients}">Ingredients Error</span>
 
         <div class="grid">
             <div class="ingredient-group" id="wraps">
@@ -60,7 +58,7 @@
         <div>
             <h3>Name your taco creation : </h3>
             <input type="text" th:field="*{name}">
-            <span class="validationError" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
+            <span class="validationError" th:errors="*{name}">
                 Name Error
             </span><br/>
 
