--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -10,15 +10,15 @@
     <h1>Design your taco!</h1>
     <img th:src="@{/images/TacoCloud.jpg}" width="500"/>
 
-    <form method="POST" th:object="${taco}">
-        <span class="validationError" th:errors="*{ingredients}">Ingredients Error</span>
+    <form method="POST" th:action="@{/design}" th:object="${taco}">
+        <span class="validationError" th:if="${#fields.hasErrors('ingredients')}" th:errors="*{ingredients}">Ingredients Error</span>
 
         <div class="grid">
             <div class="ingredient-group" id="wraps">
                 <h3>Designate your wrap : </h3>
                 <div th:each="ingredient : ${wrap}">
                     <input type="checkbox" name="ingredients" th:value="${ingredient.id}"/>
-                    <span th:text="${ingredient.name}">INGREDIENT</span></br>
+                    <span th:text="${ingredient.name}">INGREDIENT</span><br/>
                 </div>
             </div>
 
@@ -58,7 +58,7 @@
         <div>
             <h3>Name your taco creation : </h3>
             <input type="text" th:field="*{name}">
-            <span class="validationError" th:errors="*{name}">
+            <span class="validationError" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
                 Name Error
             </span><br/>
 
